--- a/project/src/app/login/login.component.html
+++ b/project/src/app/login/login.component.html
@@ -1,3 +1,11 @@
-<p>
-  login works!
-</p>
+<form [formGroup]="form">
+  <mat-form-field appearance="legacy">
+    <mat-label>Username</mat-label>
+    <input matInput formControlName="username" />
+  </mat-form-field>
+  <mat-form-field appearance="legacy">
+    <mat-label>Password</mat-label>
+    <input matInput formControlName="password" />
+  </mat-form-field>
+  <button type="button" (click)="login()">Log in</button>
+</form>
