--- a/project/src/app/books/books.component.html
+++ b/project/src/app/books/books.component.html
@@ -1,3 +1,21 @@
-<p>
-  books works!
-</p>
+<div class="container mt-5">
+  <h2>List of Books</h2>
+  <a routerLink="add/0" class="btn btn-primary mt-5 mb-3">Add Book</a>
+  <table class="table">
+    <thead>
+      <th>Id</th>
+      <th>Name</th>
+      <th>GenreId</th>
+      <th></th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let book of books">
+        <td>{{ book.id }}</td>
+        <td>{{ book.name }}</td>
+        <td>{{ book.genreId }}</td>
+        <td><a [routerLink]="['edit', book.id]">Edit</a></td>
+        <td><button (click)="onDelete(book.id!)">Delete</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
